crates/djls-python/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__blog_calendar.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "blog.templatetags.blog_calendar::tag::render_calendar":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: date
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "blog.templatetags.blog_calendar::tag::render_calendar_month_only":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: date
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
